make sure the sent mailings text and HTML bodies wrap properly on the report page (fixes CRM-1017)
git-svn-id: http://svn.civicrm.org/civicrm/trunk@5728 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -186,6 +186,10 @@ div.spacer {
   border: none;
 }
 
+#crm-container .form-layout td.report {
+  white-space: normal;
+}
+
 #crm-container .form-layout td, #crm-container .form-layout-compressed td {
   vertical-align: text-top;
 }
